--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
+sudo: false
 language: python
 python:
   - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
 env:
-    - DJANGO='django>=1.4,<1.5'
-    - DJANGO='django>=1.5'
+    - DJANGO='django>=1.8,<1.9'
+    - DJANGO='django>=1.9,<1.10'
+    - DJANGO='django>=1.10,<1.11'
+    - DJANGO='django>=1.11,<2'
 install:
-  - pip install $DJANGO --use-mirrors
+  - pip install $DJANGO
 # command to run tests
 script: python manage.py test absolute
